force-app/main/default/objects/RDSourceCode__c/RDSourceCode__c.object-meta.xml
<CustomObject>
    <label>RD SourceCode</label>
    <nameField>
        <label>SourceCode</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RD SourceCode</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>