force-app/main/default/objects/RDSourceCode__c/fields/ArcRingSC__c.field-meta.xml
<CustomField>
    <fullName>ArcRingSC__c</fullName>
    <label>ArcRingSC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>