force-app/main/default/objects/RDSourceCode__c/fields/DiscSC__c.field-meta.xml
<CustomField>
    <fullName>DiscSC__c</fullName>
    <label>DiscSC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>