force-app/main/default/objects/RDSourceCode__c/fields/GirdleCovSC__c.field-meta.xml
<CustomField>
    <fullName>GirdleCovSC__c</fullName>
    <label>GirdleCovSC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>