force-app/main/default/objects/RDSourceCode__c/fields/HolderInlSC__c.field-meta.xml
<CustomField>
    <fullName>HolderInlSC__c</fullName>
    <label>HolderInlSC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>