force-app/main/default/objects/RDSourceCode__c/fields/HolderOutSC__c.field-meta.xml
<CustomField>
    <fullName>HolderOutSC__c</fullName>
    <label>HolderOutSC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>