force-app/main/default/objects/RDSourceCode__c/fields/HolderRingSC__c.field-meta.xml
<CustomField>
    <fullName>HolderRingSC__c</fullName>
    <label>HolderRingSC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>