force-app/main/default/objects/RDSourceCode__c/fields/IGaskSC__c.field-meta.xml
<CustomField>
    <fullName>IGaskSC__c</fullName>
    <label>IGaskSC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>