force-app/main/default/objects/RDSourceCode__c/fields/ILinerSC__c.field-meta.xml
<CustomField>
    <fullName>ILinerSC__c</fullName>
    <label>ILinerSC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>