force-app/main/default/objects/RDSourceCode__c/fields/OGaskSC__c.field-meta.xml
<CustomField>
    <fullName>OGaskSC__c</fullName>
    <label>OGaskSC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>