force-app/main/default/objects/RDSourceCode__c/fields/OLinerSC__c.field-meta.xml
<CustomField>
    <fullName>OLinerSC__c</fullName>
    <label>OLinerSC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>