force-app/main/default/objects/RDSourceCode__c/fields/ORingSC__c.field-meta.xml
<CustomField>
    <fullName>ORingSC__c</fullName>
    <label>ORingSC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>