force-app/main/default/objects/RDSourceCode__c/fields/TopSectSC__c.field-meta.xml
<CustomField>
    <fullName>TopSectSC__c</fullName>
    <label>TopSectSC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>