force-app/main/default/objects/RDSourceCode__c/fields/TSealSC__c.field-meta.xml
<CustomField>
    <fullName>TSealSC__c</fullName>
    <label>TSealSC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>