force-app/main/default/objects/RDSourceCode__c/fields/TSORingSC__c.field-meta.xml
<CustomField>
    <fullName>TSORingSC__c</fullName>
    <label>TSORingSC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>